fix(checkstyle): fix overload method ordering in JniInstance
Reorganized 4 pairs of overloaded getter methods to be adjacent per Google Java Style Guide section 5.2.4. Moved by-index overloads immediately after their by-name counterparts:

**Methods reorganized:**
- getFunction(int) moved to line 111 (after getFunction(String) at line 93)
- getMemory(int) moved to line 170 (after getMemory(String) at line 152)
- getTable(int) moved to line 229 (after getTable(String) at line 211)
- getGlobal(int) moved to line 399 (after getGlobal(String) at line 381)

Removed duplicate methods that were at old locations (lines 709-839).

Overload method ordering violations: 35 → 31 (4 violations resolved)

Remaining violations:
- JniGcRuntime.java: 31 violations (native method names conflict with public method names - requires renaming native methods or significant restructuring)

Also includes linter auto-formatting changes in JniLinker and WasiExperimentalProcess.